--- a/EjemploDOM.html
+++ b/EjemploDOM.html
@@ -8,15 +8,19 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <title>Efecto hover en redes sociales</title>
+    
+    <!--codigo nuevo alex y jex script de fontawesome (banco de iconos)-->
+    <script src="https://kit.fontawesome.com/b795f3a1fd.js" crossorigin="anonymous"></script>
    
 </head>
 <body>
-    <main>
+    <header>
+        <div class="lucho"> 
         <div class="icon">
             <svg heigth="80" width="80">
                 <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
             </svg>
-            <i class='bx bx-home'></i></p><span>Home</span></label>
+            <i class='bx bx-home'></i><span>Home</span>
 
         </div>         
         
@@ -24,23 +28,23 @@
             <svg heigth="80" width="80">
                 <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
             </svg>
-            <i class='bx bxs-star-half'></i></p><span>About</span></label>
+            <i class='bx bxs-star-half'></i><span>About</span>
         </div>
 
         <div class="icon">
             <svg heigth="80" width="80">
                 <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
             </svg>
-            <i class='bx bx-folder-open'></i></p><span>Folio</span></label>
+            <i class='bx bx-folder-open'></i><span>Folio</span>
         </div>
 
         <div class="icon">
             <svg heigth="80" width="80">
                 <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
             </svg>
-            <i class='bx bx-book-bookmark'></i></p><span>Blog</span></label>
+            <i class='bx bx-book-bookmark'></i><span>Blog</span>
         </div>
-
+    </div>
     </header>
     <main class="principal">
         <h1>Bienvenidos a las noticias</h1>
@@ -95,13 +99,37 @@
             </section>
         </div>
     </main>
-    <script src="js/main.js"></script>
-    <footer class="footer">
-        <ul class="ul">
-            <li>Colaboradores Prospercity Cohorte 3</li>
-            <li>Equipo JumpForce version Jeison</li>
-            <li>2022</li>
-        </ul>
+
+    <!--experimento footer-->
+    <footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                    <img src="img/logo_jumpforce.png" alt="Logo jumpforce">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, qui.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, qui.</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="red-social">
+                 <a href="#" class="fa fa-facebook"></a>
+                 <a href="#" class="fa fa-instagram"></a>
+                 <a href="#" class="fa fa-twitter"></a>
+                 <a href="#" class="fa fa-youtube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="grupo-2">
+            <small>
+                &copy; 2022 <b>Logo jumpforce</b> - Todos Los Derechos Reservados.
+            </small>
+        </div>
     </footer>
 </body>
 </html>
