cambio de color al footer

--- a/EjemploDOM.html
+++ b/EjemploDOM.html
@@ -106,7 +106,7 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                    <img src="img/logo_jumpforce.png" alt="Logo jumpforce">
+                    <img src="img/logo_jumpforce.png" alt="jumpforce">
                     </a>
                 </figure>
             </div>
@@ -127,7 +127,7 @@
         </div>
         <div class="grupo-2">
             <small>
-                &copy; 2022 <b>Logo jumpforce</b> - Todos Los Derechos Reservados.
+                &copy; 2022 <b>Jumpforce</b> - Todos Los Derechos Reservados.
             </small>
         </div>
     </footer>
