--- a/EjemploDOM.html
+++ b/EjemploDOM.html
@@ -83,33 +83,37 @@
                 <button class="leer" id="leer">Leer Mas</button>
             </section>
             <section class="section-b">
+
                 <h2 id="titulo2">
                     Explotarlos vs. desviarlos: ¿qué opciones existen para evitar que un asteroide choque con la Tierra?
                 </h2>
                 
-                <p>
+                <p class="parrafoSectionB">
+
+                
+                <div class="container-b">
+                <div class="divText">
+                    <p class="text-b">
+
                     Si en algún momento un asteroide amenaza con impactar la Tierra, ¿por qué no los hacemos explotar en 
                     el espacio, como ocurrió en la película de ciencia ficción "Armageddon"? Expertos de la NASA opinan 
                     que es más favorable tratar de desviarlos. Hace poco, un foro internacional denominado Comisión de 
                     Planificación Espacial reunió a 18 agencias espaciales para evaluar qué sería lo mejor para desviar
                     un asteroide, en función de su tamaño y trayectoria.
+
                 </p>
-                <div class="more_text" id="more_text">
+                <div class="more_text " id="more_text">
                     <img class="img2" id="img2" src="./img/imagen-2.webp" alt="Es una imagen">
-                    <p>
+                    <p class="parrafoMore1">
                         Los dos grandes telescopios espaciales de la NASA, Hubble y James Webb trabajaron juntos para capturar el momento en el que una nave espacial se estrelló contra un asteroide como parte de la primera prueba de DART, con la que buscan redireccionar un cuerpo celeste.
                     </p>
-                    <p>
+                    <p class="parrafoMore2">
                         Esta es la primera vez que ambos aparatos observan simultáneamente el mismo objeto y, además de arrojar increíbles imágenes, otorgan nuevos datos sobre el experimento en el que se busca tener una forma de defensa planetaria.
                     </p>
                 </div>
                 <button class="read" id="read">Read More</button>
             </section>
-            <section class="section-c">
-                <p id="para" class="para">Cualquier texto que cambiará de color</p>
-                <button class="blue" onclick="changeColor('blue');">Azul</button>
-                <button  class="red"  onclick="changeColor('red');">Rojo</button>
-            </section>
+
         </div>
     </main>
     <script src="js/main.js"></script>
