estado actual de conflictos resueltos

--- a/EjemploDOM.html
+++ b/EjemploDOM.html
@@ -117,7 +117,41 @@
         </div>
     </main>
     <script src="js/main.js"></script>
-    <footer class="footer">
+    <!--experimento footer-->
+    <footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                    <img src="img/logo_jumpforce.png" alt="jumpforce">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, qui.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, qui.</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="red-social">
+                 <a href="#" class="fa fa-facebook"></a>
+                 <a href="#" class="fa fa-instagram"></a>
+                 <a href="#" class="fa fa-twitter"></a>
+                 <a href="#" class="fa fa-youtube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="grupo-2">
+            <small>
+                &copy; 2022 <b>Jumpforce</b> - Todos Los Derechos Reservados.
+            </small>
+        </div>
+    </footer>
+
+
+
+    <!-- <footer class="footer">
         <div>
             <ul class="ul">
                 <li><a href="https://github.com/LuisGomezTrujillo/DOM_Javascript">Repositorio Manipulación del DOM con Javacript</a></li>
@@ -130,6 +164,6 @@
             <img src="./img/logo_prospercity.png" alt="Logo Prospercity" class="logo">
         </div>
         
-    </footer>
+    </footer> -->
 </body>
 </html>
